--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -2,6 +2,6 @@
   .container
     %ul.navbar-list
       %li.navbar-item
-        = link_to "Home", root_path, class: 'navbar-link'
+        = link_to image_tag('logo.png'), root_path, class: 'navbar-link'
       %li.navbar-item
         = link_to "New article", new_article_path, class: 'navbar-link'
