--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,1 +1,4 @@
-%li= link_to article.title, article
+#article_listing
+	%h3.title= link_to article.title, article
+	.content= article.body
+	.meta=	article.created_at
