--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -3,5 +3,5 @@
     %ul.navbar-list
       %li.navbar-item
         = link_to image_tag('logo.png'), root_path, class: 'navbar-link'
-      %li.navbar-item
-        = link_to "New article", new_article_path, class: 'navbar-link'
+      %li.navbar-item-right
+        = link_to "New article", new_article_path, class: 'button button--primary'
