Remove container from articles index and css styling

--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,4 +1,4 @@
-#article_listing
+.article_listing
 	%h3.title= link_to article.title, article
 	.content= article.body
 	.meta= time_ago_in_words(article.created_at)
