--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
 .navbar, .navbar-spacer {
 	border-top: 0;
 	padding-bottom: 6px;
+	height: 4.5rem;
 }
 .navbar-item-right {
 	float: right;
@@ -52,6 +53,23 @@
 .button--primary {
 	border-color: #a9d8b2;
 	color: #57ad68;
+}
+.article_listing {
+	padding: 25px 0 32px;
+	border-bottom: 1px solid rgba(0,0,0,0.05);
+}
+.title {
+	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+	letter-spacing: -0.02em;
+	font-weight: 700;
+	font-style: normal;
+	line-height: 1.3;
+	font-size: 24px;
+	margin: 0;
+}
+.title a {
+	color: #000;
+	text-decoration: none;
 }
 .meta {
 	color: rgba(0,0,0,0.3);
