Style article detail page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,3 +75,41 @@
 	color: rgba(0,0,0,0.3);
 	font-size: 13px;
 }
+.container--article--detail {
+	margin-top: 80px;
+}
+.article--title--detail {
+	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+	letter-spacing: -0.02em;
+	font-weight: 700;
+	font-style: normal;
+	font-size: 36px;
+	margin: 40px 0;
+}
+.article--body--detail {
+	font-family: Cambria,"Times New Roman",Times,serif;
+	letter-spacing: 0.01rem;
+	font-weight: 100;
+	font-style: normal;
+	font-size: 22px;
+	line-height: 1.5;
+}
+.metabar {
+	display: block;
+	z-index: 500;
+	width: 100%;
+	font-size: 14px;
+	color: rgba(0,0,0,0.3);
+	letter-spacing: -0.02em;
+	font-weight: 400;
+	font-style: normal;
+	box-sizing: border-box;
+	-webkit-transition: 200ms background-color,200ms color;
+	transition: 200ms background-color,200ms color;
+}
+.metabar--bottom {
+	display: block;
+	position: fixed;
+	bottom: 0;
+	height: 50px;
+}
