--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,31 +54,14 @@
 	border-color: #a9d8b2;
 	color: #57ad68;
 }
-.article_listing {
+.article--listing {
 	padding: 25px 0 32px;
 	border-bottom: 1px solid rgba(0,0,0,0.05);
-}
-.title {
-	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
-	letter-spacing: -0.02em;
-	font-weight: 700;
-	font-style: normal;
-	line-height: 1.3;
-	font-size: 24px;
-	margin: 0;
-}
-.title a {
-	color: #000;
-	text-decoration: none;
-}
-.meta {
-	color: rgba(0,0,0,0.3);
-	font-size: 13px;
 }
 .container--article--detail {
 	margin-top: 80px;
 }
-.article--title--detail {
+.article--title {
 	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 	letter-spacing: -0.02em;
 	font-weight: 700;
@@ -86,13 +69,21 @@
 	font-size: 36px;
 	margin: 40px 0;
 }
-.article--body--detail {
+.article--title a {
+	color: #000;
+	text-decoration: none;
+}
+.article--body {
 	font-family: Cambria,"Times New Roman",Times,serif;
 	letter-spacing: 0.01rem;
 	font-weight: 100;
 	font-style: normal;
 	font-size: 22px;
 	line-height: 1.5;
+}
+.meta {
+	color: rgba(0,0,0,0.3);
+	font-size: 13px;
 }
 .metabar {
 	display: block;
