Override height for textarea

--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -10,7 +10,7 @@
   .row
     .twelve.columns
       = f.label :body
-      = f.text_area :body, class: "u-full-width", placeholder: "Your Article goes here"
+      = f.text_area :body, class: "u-full-width", placeholder: "Your Article goes here", rows: "10"
   .row
     .six.columns
       = f.submit "Save", class: "button-primary eight columns"
