--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,3 +1,7 @@
 .container
   %ul
     = render @articles
+  %div.digg_pagination
+    %div.page_info
+      = page_entries_info @articles 
+    = will_paginate @users, :container => false
