--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -3,5 +3,8 @@
     %ul.navbar-list
       %li.navbar-item
         = link_to "Home", root_path, class: 'navbar-link'
+      - all_categories.each do |category|
+        %li.navbar-item
+          = link_to category.name, category_articles_path(category), class: 'navbar-link'
       %li.navbar-item
         = link_to "New article", new_article_path, class: 'navbar-link'
