--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,4 +1,8 @@
+
 .container.container--article
+  %ul
+  - @categories.each do |category|
+    =link_to category.name , articles_path(category: category.id)
   %ul
     = render @articles
   %div.digg--pagination
